# PayPeer

./: .gitignore  Cargo.toml  README.md  canister_ids.json  components.json  dfx.json  index.html  package-lock.json  package.json  vite.config.js
canisters/backend/: Cargo.toml  backend.did
canisters/backend/src/: lib.rs  memory.rs
canisters/backend/src/instructinos/: global_state.rs  offer.rs
canisters/backend/src/instructions/: global_state.rs  icrc1.rs  mod.rs  offer.rs  shared.rs  user.rs
canisters/backend/src/states/: global_state.rs  mod.rs  offer.rs  shared.rs  user.rs
public/locales/en/: app-sidebar.json  app.json  create-order.json  home.json  profile.json  wallet.json
public/locales/es/: app-sidebar.json  app.json  create-order.json  home.json  profile.json  wallet.json
src/: i18n.jsx  index.css  layout.jsx  main.jsx  routes.jsx
src/components/: icons.jsx  language-selector.jsx  theme-provider.jsx
src/components/shared/: app-sidebar.jsx  connect-button.jsx  header.jsx  language-selector.jsx  theme-toggle.jsx
src/components/ui/: sidebar.jsx
src/context/: theme-provider.jsx
src/hooks/: use-auth.js  use-canister.js  use-theme.js  use-user.js
src/layouts/: app-layout.jsx  home-layout.jsx
src/lib/: canisters.js  env.js  parsers.js
src/pages/: app.jsx  create-order.jsx  home.jsx  profile.jsx  wallet.jsx
src/store/: auth-store.jsx
