[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.11"
ic-cdk = "0.17.0"
ic-stable-structures = "0.6.9"
icrc-ledger-types = "0.1.10"
serde = "1.0.216"
